# snapshotter

./: README.md  dockerfile  setup.cfg  setup.py
snapshotter/: __init__.py  snapshotter.py  webserver.py
