[metadata]

name = snapshotter

description = Simple package to collect obscured data from the private workspace from inside foreign infrastructures.

version = 1.0.0


[options]

packages = find:
python_requires = >= 3.8.*

setup_requires =
    setuptools
    wheel

install_requires =
    aiohttp == 3.6.*
    slack-sdk == 3.1.*
    pyngrok == 5.0.*


[options.entry_points]

console_scripts =
    snapshotter = snapshotter:entrypoint
